refactor(catalog-glue, trino-connector): Fix code issues found in PR review
- Require warehouse and format properties explicitly; remove /tmp fallback and parquet default
- Replace three format switch methods with StorageFormat enum lookup
- Remove redundant icebergGlueCatalog null guard (createGlueCatalog throws on failure)
- Extract requireColumnName helper to deduplicate Iceberg field ID null checks
- Fix Locale.ENGLISH FQN and update to Locale.ROOT; add @SuppressWarnings for unchecked cast
- Fix TimestampType FQN in test; add format/serde_lib to test fixtures
- Make HivePropertyMeta partition/bucket/sort constants public; use them in GlueMetadataAdapter
- Extract GlueConnectorAdapter config key strings as private constants
- Compile TrinoQueryIT regex patterns as static final fields
- Add optional parameter syntax (${?param}) and skip_testsets option to Trino test tooling