@@ -191,7 +191,7 @@ class TestGlueCatalogTableOperations {
             ident,
             columns,
             "my comment",
-            Map.of(GlueConstants.LOCATION, "s3://bucket/path"),
+            Map.of(GlueConstants.LOCATION, "s3://bucket/path", GlueConstants.FORMAT, "parquet"),
             Transforms.EMPTY_TRANSFORM,
             Distributions.NONE,
             SortOrders.NONE,
@@ -216,7 +216,7 @@ class TestGlueCatalogTableOperations {
                 ident,
                 new Column[0],
                 null,
-                Collections.emptyMap(),
+                Map.of(GlueConstants.FORMAT, "parquet"),
                 Transforms.EMPTY_TRANSFORM,
                 Distributions.NONE,
                 SortOrders.NONE,
@@ -252,6 +252,8 @@ class TestGlueCatalogTableOperations {
             HiveStorageConstants.TEXT_INPUT_FORMAT_CLASS,
             GlueConstants.OUTPUT_FORMAT,
             HiveStorageConstants.IGNORE_KEY_OUTPUT_FORMAT_CLASS,
+            GlueConstants.SERDE_LIB,
+            HiveStorageConstants.LAZY_SIMPLE_SERDE_CLASS,
             GlueConstants.TABLE_TYPE,
             "EXTERNAL_TABLE");
 
@@ -286,6 +288,7 @@ class TestGlueCatalogTableOperations {
         Table.builder()
             .name("old")
             .description("old comment")
+            .parameters(Map.of(GlueConstants.FORMAT, "parquet"))
             .storageDescriptor(StorageDescriptor.builder().build())
             .createTime(Instant.now())
             .build();
@@ -305,7 +308,7 @@ class TestGlueCatalogTableOperations {
     Table glueTable =
         Table.builder()
             .name("t")
-            .parameters(Map.of("existing", "v1"))
+            .parameters(Map.of("existing", "v1", GlueConstants.FORMAT, "parquet"))
             .storageDescriptor(StorageDescriptor.builder().build())
             .createTime(Instant.now())
             .build();
@@ -326,6 +329,7 @@ class TestGlueCatalogTableOperations {
     Table glueTable =
         Table.builder()
             .name("t")
+            .parameters(Map.of(GlueConstants.FORMAT, "parquet"))
             .storageDescriptor(
                 StorageDescriptor.builder()
                     .columns(
